# m365-posture-auditor

./: .gitignore  LICENSE  README.md  pyproject.toml
src/m365audit/: __init__.py  cli.py  cli_multi.py  delta.py  graph.py  models.py  multi_tenant.py  report_md.py  report_pdf.py  runner.py
src/m365audit/checks/: __init__.py  base.py  conditional_access.py  defender.py  email.py  identity.py  oauth.py  sharepoint.py
tests/: test_cli.py  test_graph_and_checks.py  test_models.py  test_new_features.py
