[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "m365audit"
version = "0.1.0"
description = "Read-only Microsoft 365 security posture audit tool"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Reynaud Hunter" }]
keywords = ["cybersecurity", "m365", "office365", "audit", "compliance", "graph-api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]
dependencies = [
    "requests>=2.31",
    "reportlab>=4.0",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov"]

[project.scripts]
m365audit = "m365audit.cli:main"
m365audit-multi = "m365audit.cli_multi:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
